# swagger-ui/dist/swagger-data.json
@@ -49,16 +49,14 @@
         }
       }
     },
-<<<<<<< HEAD:swagger-ui/dist/swagger.json
-=======
     "/api/categories/{categoryId}": {
-      "put": {
-        "description": "Updates an existing category in the system.",
+      "get": {
+        "description": "Retrieves a category by its ID.",
         "tags": [
           "categories"
         ],
-        "summary": "Update an existing category",
-        "operationId": "updateCategory",
+        "summary": "Find a category by ID",
+        "operationId": "get",
         "parameters": [
           {
             "type": "string",
@@ -69,32 +67,17 @@
           },
           {
             "type": "integer",
-            "description": "The ID of the category to update",
+            "description": "ID of the category to retrieve",
             "name": "categoryId",
             "in": "path",
             "required": true
-          },
-          {
-            "description": "The updated category object",
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/CategoryUpdateRequest"
-            }
           }
         ],
         "responses": {
           "200": {
-            "description": "Successfully updated category.",
+            "description": "Successfully retrieved category.",
             "schema": {
               "$ref": "#/responses/webResponse"
-            }
-          },
-          "400": {
-            "description": "Invalid request payload.",
-            "schema": {
-              "$ref": "#/responses/errorResponse"
             }
           },
           "404": {
@@ -156,7 +139,6 @@
         }
       }
     },
->>>>>>> 68da828 (make docs for delete):swagger-ui/dist/swagger-data.json
     "/categories": {
       "get": {
         "description": "Retrieves all categories.",
@@ -182,44 +164,6 @@
       }
     },
     "/categories/{categoryId}": {
-      "get": {
-        "description": "Retrieves a category by its ID.",
-        "tags": [
-          "categories"
-        ],
-        "summary": "Find a category by ID",
-        "operationId": "getCategory",
-        "parameters": [
-          {
-            "type": "integer",
-            "description": "ID of the category to retrieve",
-            "name": "categoryId",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully retrieved category.",
-            "schema": {
-              "$ref": "#/responses/webResponse"
-            }
-          },
-          "404": {
-            "description": "Category not found.",
-            "schema": {
-              "$ref": "#/responses/errorResponse"
-            }
-          },
-          "500": {
-            "description": "Internal server error.",
-            "schema": {
-              "$ref": "#/responses/errorResponse"
-            }
-          }
-        }
-<<<<<<< HEAD:swagger-ui/dist/swagger.json
-      },
       "put": {
         "description": "Updates an existing category in the system.",
         "tags": [
@@ -271,45 +215,6 @@
             }
           }
         }
-      },
-      "delete": {
-        "description": "Deletes an existing category in the system.",
-        "tags": [
-          "categories"
-        ],
-        "summary": "Delete an existing category",
-        "operationId": "deleteCategory",
-        "parameters": [
-          {
-            "type": "integer",
-            "description": "ID of the category to delete",
-            "name": "categoryId",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully deleted category.",
-            "schema": {
-              "$ref": "#/responses/webResponse"
-            }
-          },
-          "404": {
-            "description": "Category not found.",
-            "schema": {
-              "$ref": "#/responses/errorResponse"
-            }
-          },
-          "500": {
-            "description": "Internal server error.",
-            "schema": {
-              "$ref": "#/responses/errorResponse"
-            }
-          }
-        }
-=======
->>>>>>> 68da828 (make docs for delete):swagger-ui/dist/swagger-data.json
       }
     }
   },
